[gd_scene load_steps=20 format=3 uid="uid://da5itagju6nrx"]

[ext_resource type="Script" uid="uid://c3q2jl86ekc4u" path="res://Scenes/MainScenes/GameScene.gd" id="1_68uyl"]
[ext_resource type="PackedScene" uid="uid://b1ptux668fjj2" path="res://Scenes/Maps/Map1.tscn" id="1_ianr5"]
[ext_resource type="Script" uid="uid://nbuf0cmw2nrf" path="res://Scenes/MainScenes/UI.gd" id="3_jem3k"]
[ext_resource type="Texture2D" uid="uid://ccmbrc832q733" path="res://Assets/UI/Buttons/button_square_depth_gradient.png" id="3_tnagp"]
[ext_resource type="Texture2D" uid="uid://cecy4rgv45ed" path="res://Assets/UI/Buttons/button_square_flat.png" id="4_o10dm"]
[ext_resource type="Texture2D" uid="uid://c38f4yytye8ga" path="res://Assets/UI/Buttons/button_square_depth_flat.png" id="5_no243"]
[ext_resource type="Texture2D" uid="uid://dcw0ohdkpaccy" path="res://Assets/Towers/RangedTower1_turret.png" id="6_o10dm"]
[ext_resource type="Texture2D" uid="uid://cntcgyt8s5788" path="res://Assets/Towers/RangedTower2_turret.png" id="7_no243"]
[ext_resource type="Texture2D" uid="uid://crp3r2xqp5tc3" path="res://Assets/Icons/fastForward.png" id="9_80vwl"]
[ext_resource type="Texture2D" uid="uid://w3koertuxglx" path="res://Assets/Icons/pause.png" id="9_br1xs"]
[ext_resource type="Texture2D" uid="uid://d2ghinnku76lx" path="res://Assets/Icons/return.png" id="9_h0y4r"]
[ext_resource type="Texture2D" uid="uid://djsms1ysch5w6" path="res://Assets/Towers/Obstacle1_base.png" id="9_j856t"]
[ext_resource type="Texture2D" uid="uid://p5r8g8bpef3a" path="res://Assets/UI/HPbar.jpg" id="10_7ddxx"]
[ext_resource type="Texture2D" uid="uid://b52i1tf2w03ea" path="res://Assets/Icons/forward.png" id="10_80vwl"]
[ext_resource type="Texture2D" uid="uid://41i2e76d22bw" path="res://Assets/Towers/MeleeTower1_base.png" id="10_a7g65"]
[ext_resource type="Texture2D" uid="uid://c3ihmkr4oh0gx" path="res://Assets/Towers/RangedTowerGirl_icon.png" id="11_0dyjl"]
[ext_resource type="FontFile" uid="uid://ck5qkpnasud14" path="res://Assets/Fonts/VeniteAdoremusStraight-Yzo6v.ttf" id="11_a7g65"]
[ext_resource type="Texture2D" uid="uid://dscw14lp4fqsv" path="res://Assets/Towers/RangedTowerGirl2_icon.png" id="12_ibot7"]
[ext_resource type="Texture2D" uid="uid://x3mjf6tyivs5" path="res://Assets/Towers/RangedTowerBoy1_icon.png" id="13_rs15k"]

[node name="GameScene" type="Node2D"]
script = ExtResource("1_68uyl")

[node name="Map1" parent="." instance=ExtResource("1_ianr5")]

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("3_jem3k")

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="BuildBar" type="HBoxContainer" parent="UI/HUD"]
layout_direction = 2
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -85.0
offset_right = 180.0
grow_vertical = 0
theme_override_constants/separation = 10

[node name="RangedTower1" type="TextureButton" parent="UI/HUD/BuildBar" groups=["tower_options"]]
custom_minimum_size = Vector2(85, 85)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource("3_tnagp")
texture_pressed = ExtResource("4_o10dm")
texture_hover = ExtResource("5_no243")
stretch_mode = 4

[node name="Icon" type="TextureRect" parent="UI/HUD/BuildBar/RangedTower1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_o10dm")

[node name="RangedTower2" type="TextureButton" parent="UI/HUD/BuildBar" groups=["tower_options"]]
custom_minimum_size = Vector2(85, 85)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource("3_tnagp")
texture_pressed = ExtResource("4_o10dm")
texture_hover = ExtResource("5_no243")
stretch_mode = 4

[node name="Icon" type="TextureRect" parent="UI/HUD/BuildBar/RangedTower2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_no243")

[node name="Obstacle1" type="TextureButton" parent="UI/HUD/BuildBar" groups=["tower_options"]]
custom_minimum_size = Vector2(85, 85)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource("3_tnagp")
texture_pressed = ExtResource("4_o10dm")
texture_hover = ExtResource("5_no243")
stretch_mode = 4

[node name="Icon" type="TextureRect" parent="UI/HUD/BuildBar/Obstacle1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 14.0
offset_right = 110.0
offset_bottom = 109.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)
texture = ExtResource("9_j856t")
expand_mode = 2
stretch_mode = 4

[node name="MeleeTower1" type="TextureButton" parent="UI/HUD/BuildBar" groups=["tower_options"]]
custom_minimum_size = Vector2(85, 85)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource("3_tnagp")
texture_pressed = ExtResource("4_o10dm")
texture_hover = ExtResource("5_no243")
stretch_mode = 4

[node name="Icon" type="TextureRect" parent="UI/HUD/BuildBar/MeleeTower1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 14.0
offset_right = 110.0
offset_bottom = 109.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)
texture = ExtResource("10_a7g65")
expand_mode = 2
stretch_mode = 4

[node name="RangedTowerGirl" type="TextureButton" parent="UI/HUD/BuildBar" groups=["tower_options"]]
custom_minimum_size = Vector2(85, 85)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource("3_tnagp")
texture_pressed = ExtResource("4_o10dm")
texture_hover = ExtResource("5_no243")
stretch_mode = 4

[node name="Icon" type="TextureRect" parent="UI/HUD/BuildBar/RangedTowerGirl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 2.0
offset_right = 168.0
offset_bottom = 167.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)
texture = ExtResource("11_0dyjl")
expand_mode = 2
stretch_mode = 4

[node name="RangedTowerGirl2" type="TextureButton" parent="UI/HUD/BuildBar" groups=["tower_options"]]
custom_minimum_size = Vector2(85, 85)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource("3_tnagp")
texture_pressed = ExtResource("4_o10dm")
texture_hover = ExtResource("5_no243")
stretch_mode = 4

[node name="Icon" type="TextureRect" parent="UI/HUD/BuildBar/RangedTowerGirl2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 2.0
offset_right = 168.0
offset_bottom = 167.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)
texture = ExtResource("12_ibot7")
expand_mode = 2
stretch_mode = 4

[node name="RangedTowerBoy1" type="TextureButton" parent="UI/HUD/BuildBar" groups=["tower_options"]]
custom_minimum_size = Vector2(85, 85)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource("3_tnagp")
texture_pressed = ExtResource("4_o10dm")
texture_hover = ExtResource("5_no243")
stretch_mode = 4

[node name="Icon" type="TextureRect" parent="UI/HUD/BuildBar/RangedTowerBoy1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 2.0
offset_right = 168.0
offset_bottom = 167.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)
texture = ExtResource("13_rs15k")
expand_mode = 2
stretch_mode = 4

[node name="InfoBar" type="ColorRect" parent="UI/HUD"]
self_modulate = Color(0, 0, 0, 0.470588)
custom_minimum_size = Vector2(0, 60)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/HUD/InfoBar"]
layout_mode = 0
offset_right = 451.0
offset_bottom = 60.0
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="UI/HUD/InfoBar/HBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
theme_override_fonts/font = ExtResource("11_a7g65")
theme_override_font_sizes/font_size = 30
text = "    HP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BaseHPBar" type="TextureProgressBar" parent="UI/HUD/InfoBar/HBoxContainer"]
custom_minimum_size = Vector2(400, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
max_value = 5.0
value = 5.0
nine_patch_stretch = true
texture_under = ExtResource("10_7ddxx")
texture_progress = ExtResource("10_7ddxx")
tint_under = Color(0.215686, 0.215686, 0.215686, 1)
tint_progress = Color(0.305882, 1, 0.0823529, 1)

[node name="GameControls" type="HBoxContainer" parent="UI/HUD"]
custom_minimum_size = Vector2(150, 75)
layout_direction = 2
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0
alignment = 2

[node name="Restart" type="TextureButton" parent="UI/HUD/GameControls"]
process_mode = 3
layout_mode = 2
texture_normal = ExtResource("9_h0y4r")

[node name="FastForward" type="TextureButton" parent="UI/HUD/GameControls"]
process_mode = 3
layout_mode = 2
texture_normal = ExtResource("9_80vwl")

[node name="PausePlay" type="TextureButton" parent="UI/HUD/GameControls"]
process_mode = 3
layout_direction = 3
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("9_br1xs")
texture_pressed = ExtResource("10_80vwl")

[connection signal="pressed" from="UI/HUD/GameControls/Restart" to="UI" method="_on_restart_pressed"]
[connection signal="pressed" from="UI/HUD/GameControls/FastForward" to="UI" method="_on_fast_forward_pressed"]
[connection signal="pressed" from="UI/HUD/GameControls/PausePlay" to="UI" method="_on_pause_play_pressed"]
